--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
     "axios": "^0.27.2",
+    "excel-export": "^0.5.1",
     "install": "^0.13.0",
     "moment": "^2.29.3",
     "react": "^17.0.2",
