--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "firebase": "^8.9.1",
     "install": "^0.13.0",
     "moment": "^2.29.3",
+    "phone": "^3.1.22",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-export-excel": "^0.5.3",
     "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.3.1",
+    "react-phone-number-input": "^3.2.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
