--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
     "axios": "^0.27.2",
+    "currency-map-country": "^1.0.12",
     "excel-export": "^0.5.1",
     "file-save": "^0.2.0",
     "firebase": "^8.9.1",
