--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "react-export-excel": "^0.5.3",
     "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-phone-number-input": "^3.2.3",
-    "react-quill": "^2.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
