--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.6",
+    "antd-table-saveas-excel": "^2.2.1",
     "apexcharts": "^3.27.1",
     "axios": "^0.27.2",
     "currency-map-country": "^1.0.12",
