--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.3.2",
     "styled-components": "^5.3.0",
     "sunflower-antd": "^1.0.0-beta.3",
     "use-debounce": "^8.0.0",
